Revert "A site-wide redesign"
This reverts commit e31c36519c6d42a643ecc5ff6b263c23df1ecc93.

--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -1,11 +1,15 @@
 
+#root{
+    background-image: url(./Media/tracy-adams-_mWreAf3b-A-unsplash.jpg);
+    background-size:cover;
+}
 
 @font-face{
-    font-family: serif;
+    font-family: rowdies-bold;
     src: url(./Media/fonts/Rowdies/Rowdies-Bold.ttf)
 }
 @font-face{
-    font-family: serif;
+    font-family: rowdies-regular;
     src:url(./Media/fonts/Rowdies/Rowdies-Regular.ttf)
 }
 /*Desktop Styling*/
@@ -16,9 +20,8 @@ background-color:blue;
 height: 50px;
 margin:0 auto;
 width: 100%;
-font-family: serif;
+font-family: rowdies-bold;
 position:fixed;
-z-index: 1000;
 }
 .Wrapper .typedWords{
     padding-top: 50px;
@@ -27,21 +30,10 @@ z-index: 1000;
     width:80%;
     margin:0 auto;
     animation-duration: 10s;
-    font-family: serif; 
+    font-family: rowdies-bold; 
     color:black;
 }.info{
-    margin:20px 2%;
-    text-align:left;
-    width:60%;
-    color:white;
-    font-size:30px;
-}
-.projectSubHeading{
-    animation:animation 5s;
-}
-.back-to-top{
-    width:50px;
-
+    margin:5% auto;
 }
 li{
     color: white;
@@ -58,21 +50,15 @@ li{
     height: 100vh;
     background-size:cover;
     padding-top:50px;
-    background-image: url(./Media/landingBg.jpg);
-    background-repeat:no-repeat;
-
 }
 .Wrapper h1{
     margin-top: 15vh;
-    color:white;
-    font-family:serif;
-    font-size: 40px;
 }
 .Wrapper a{
-    color:white;
+    color: black;
     animation-name:animation;
     animation-duration: 5s;
-    font-family: serif;
+    font-family: rowdies-bold;
 }
 ul{
     padding-right: 40px;
@@ -81,63 +67,56 @@ ul{
 h1{
     animation-name:animation;
     animation-duration: 5s;
-    font-family: serif;
+    font-family: rowdies-bold;
 }
 .h1{
     font-size: 40px;
+    color: blanchedalmon;
+    background-color:whitesmoke;
     animation-name: animation;
     animation-duration: 5s;
 }
 p{
     font-size: 25px;
-    font-family: serif;
+    font-family: rowdies-regular;
     
 }
 .projectSection{
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: none;
-    width:100%;
-    margin:50px auto;
+    height: 100vh;
 }
+
 .projectSection img{
-    border: groove 10px skyblue;
-    width:30%;
-}
-.projectDetails{
-    animation: animation 5s;
-    margin-top: 20px;
-    font-size: 2vh;
-}
-.projectDetails a{
-    color: black;
-    font-family: serif;
-    font-size:20px;    
+    width:40%;
 }
 .projectsDiv{
-    min-height: calc(100vh - 50px);
+    height: 100vh;
     padding-top: 50px;
-    font-family: serif;
-    display: flex;
-    flex-direction:column;
-    overflow:hidden;
-    /*background-color:#21ACCB;*/
-    /*background-color: #207FC1;*/
+    font-family: rowdies-bold;
+    display: block;
+    background-color:black;
+    border-radius: 0 50px 0 50px;
 }
-.slider-left div, .slider-right div{
-    background-color:#207FC1;
+.projectSection div a img{
+    margin-top: 50%;
 }
-.react-3d-carousel{
-    margin-top: 20px;
+
+.site1:hover, .site2:hover, .site3:hover{
+    width: 50%;
+    border: 3px solid white;
+    border-radius: 5px 10px 5px 10px;
 }
+.site3{
+    background-color: wheat;
+}
+
 .contactDiv{
     
     padding-top: 50px;
-    font-family: serif;
-    background-color:#207FC1;
-}
-.contactDiv h1{
-    color:white;
+    font-family: rowdies-regular;
+    background-color: black;
 }
 .contactDiv p{
     width: 70%;
@@ -166,7 +145,7 @@ input{
 }
 .confirmationAppear{
     display: block;
-    color:white;
+    color:wheat;
     animation: "anime" 4s
 }
 label{
@@ -189,6 +168,9 @@ textarea{
     width:80%;
     margin:0 auto;
     line-height: 50px;
+
+    
+
 }
 a{
     color:white;
@@ -219,10 +201,10 @@ button{
 }
 .submission{
      visibility: hidden;
-     color: white;
+     color: wheat;
 }
 .error-msgs{
-    color: white;
+    color: wheat;
 
 }
 @keyframes anime{
@@ -236,7 +218,10 @@ button{
 }
 /*Ipad Styling*/
 @media only screen and (max-width:1023px) and (min-width:768px){
-
+    #root{
+        background-image: url(./Media/tracy-adams-_mWreAf3b-A-unsplash.jpg);
+        background-size:cover;
+    }
     .info{
     margin:5% auto;
     }
@@ -246,34 +231,21 @@ button{
         height: 120px;
         margin:0 auto;
         width: 100%;
-        font-family: serif;
+        font-family: rowdies-bold;
         position:fixed;
         z-index: 1000;
     }
 
-    .Wrapper{
+    .Wrapper .typedWords{
         padding-top: 50px;
         animation-name:animation;
         animation-direction: forwards;
         width:80%;
         margin:0 auto;
         animation-duration: 10s;
-        font-family: serif; 
+        font-family: rowdies-bold; 
         color: navy;
     }
-.info{
-    margin:50px 2%;
-    text-align:left;
-    width:60%;
-    color:white;
-    font-size:30px;
-}
-.projectSubHeading{
-    animation:animation 5s;
-}
-.back-to-top{
-    width:50px;
-}
 
     ul{
         padding: 0;
@@ -287,83 +259,70 @@ button{
         line-height: 35px;
     }
     .Wrapper{
-        width: 100%;
+        width: 90%;
         margin: auto auto;
         height: 100vh;
-        background-size:100% 100%;
+        background-size:cover;
         padding-top: 120px;
-        background-image: url(./Media/landingBg.jpg);
-        background-repeat:no-repeat;
     }
     .Wrapper h1{
         margin-top: 7vh;
-        color:white;
-        font-family:serif;
-        font-size: 25px;
     }
     .Wrapper a{
-        color: white;
+        color: black;
         animation-name:animation;
         animation-duration: 5s;
-        font-family: serif;
+        font-family: rowdies-bold;
     }
     h1{ 
         animation-name:animation;
         animation-duration: 5s;
-        font-family: serif;
+        font-family: rowdies-bold;
     }
     .h1{
-        font-size: 30px;
+        font-size: 20px;
+        color: blanchedalmon;
+        background-color:whitesmoke;
         animation-name: animation;
         animation-duration: 5s;
     }
     p{
         font-size: 18px;
-        font-family: serif;
+        font-family: rowdies-regular;
         
     }
     .projectSection{
         display: grid;
-        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
         grid-template-areas: none;
-    
+        height: 100vh;
 
     }
+    
     .projectSection img{
-        border: groove 10px skyblue;
         width:40%;
     }
-    .projectDetails{
-        animation: animation 5s;
-        margin-top:35px;
-    }
-    .projectDetails a{
-        color: black;
-        font-family: serif;
-        font-size:20px    
-    }
     .projectsDiv{
-        height: calc(100vh - 130px);
+        height: 100vh;
         padding-top: 130px;
-        font-family: serif;
+        font-family: rowdies-bold;
         display: block;
-
+        background-color: black;
+        border-radius: 0 35px 0 35px;
     }
-    .slider-left div, .slider-right div{
-        background-color:#207FC1;
-    }
-    .react-3d-carousel{
-        margin-top: 20px;
     
+    .site1:hover, .site2:hover, .site3:hover{
+        width: 50%;
     }
-       
+    .site3{
+        background-color: wheat;
+    }
+    
     .contactDiv{
+        
         padding-top: 130px;
-        font-family: serif;
-        background-color: #207FC1;
-    }
-    .contactDiv h1{
-        color:white;
+        font-family: rowdies-regular;
+        background-color: black;
     }
     .contactDiv p{
         width: 70%;
@@ -393,7 +352,7 @@ button{
     }
     .confirmationAppear{
         display: block;
-        color:white;
+        color:wheat;
         animation: "anime" 4s
     }
     label{
@@ -418,7 +377,9 @@ button{
         width:80%;
         margin:0 auto;
         line-height: 35px;
-        color:white;
+        color:navy;
+        
+    
     }
     a{
         color:white;
@@ -449,10 +410,10 @@ button{
     }
     .submission{
          visibility: hidden;
-         color: white;
+         color: wheat;
     }
     .error-msgs{
-        color: white;
+        color: wheat;
         width: 80%;
         margin-left: auto;
         margin-right: auto;
@@ -471,14 +432,17 @@ button{
 
 /*Moblie Styling*/
 @media only screen and (max-width:767px){
-
+    #root{
+        background-image: url(./Media/tracy-adams-_mWreAf3b-A-unsplash.jpg);
+        background-size:cover;
+    }
     #mainNav{
         position: 0;
         background-color:blue;
         height: 120px;
         margin:0 auto;
         width: 100%;
-        font-family: serif;
+        font-family: rowdies-bold;
         position:fixed;
         z-index: 1000;
     }
@@ -492,21 +456,8 @@ button{
         width:80%;
         margin:0 auto;
         animation-duration: 10s;
-        font-family: serif; 
+        font-family: rowdies-bold; 
         color: navy;
-    }
-    .info{
-        margin:50px 5%;
-        text-align:left;
-        width:60%;
-        color:white;
-        font-size:18px;
-    }
-    .projectSubHeading{
-        animation:animation 5s;
-    }
-    .back-to-top{
-        width:50px;
     }
 
     ul{
@@ -521,92 +472,71 @@ button{
         line-height: 35px;
     }
     .Wrapper{
-        width: 100%;
+        width: 90%;
         margin: auto auto;
         height: 100vh;
-        background-size:100% 100%;
+        background-size:cover;
         padding-top: 120px;
-        background-image: url(./Media/landingBg.jpg);
-        background-repeat:no-repeat;
+        overflow: hidden;
     }
     .Wrapper h1{
         margin-top: 7vh;
-        color:white;
-        font-family:serif;
-        font-size: 20px;
-        margin-left: 5%;
-        margin-right: 5%;
     }
     .Wrapper a{
-        color: white;
+        color: black;
         animation-name:animation;
         animation-duration: 5s;
-        font-family: serif;
+        font-family: rowdies-bold;
     }
     h1{ 
         animation-name:animation;
         animation-duration: 5s;
-        font-family: serif;
+        font-family: rowdies-bold;
     }
     .h1{
         font-size: 20px;
+        color: blanchedalmon;
+        background-color:whitesmoke;
         animation-name: animation;
         animation-duration: 5s;
     }
     p{
-        font-size: 15px;
-        font-family: serif;
+        font-size: 18px;
+        font-family: rowdies-regular;
         
     }
     .projectSection{
         
         display: grid;
-        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
         grid-template-areas: none;
+        height: 100vh;
     }
     
     .projectSection img{
-        border: groove 10px skyblue;
         width:40%;
     }
-    .projectDetails{
-        animation: animation 5s;
-        margin-top:35px;
-    }
-    .projectDetails a{
-        color: black;
-        font-family: serif;
-        font-size:20px    
-    }
     .projectsDiv{
-        height: calc(100vh - 130px);
+        height: 100vh;
         padding-top: 130px;
-        font-family: serif;
-        display: flex;
-        flex-direction:column;
-        clear:both;
-        
-
+        font-family: rowdies-bold;
+        display: block;
+        background-color:black;
+        border-radius: 0 25px 0 25px;
     }
-    .slider-left div, .slider-right div{
-        background-color:#207FC1;
-    }
-    .react-3d-carousel{
-        margin-top: 20px;
     
+    .site1:hover, .site2:hover, .site3:hover{
+        width: 50%;
+    }
+    .site3{
+        background-color: wheat;
     }
     
     .contactDiv{
         
         padding-top: 130px;
-        font-family: serif;
-        background-color:#207FC1;
-        display: flex;
-        flex-direction:column;
-        clear:both;
-    }
-    .contactDiv h1{
-        color:white;
+        font-family: rowdies-regular;
+        background-color: black;
     }
     .contactDiv p{
         width: 70%;
@@ -636,7 +566,7 @@ button{
     }
     .confirmationAppear{
         display: block;
-        color:white;
+        color:wheat;
         animation: "anime" 4s
     }
     label{
@@ -649,7 +579,7 @@ button{
         color: blue;
         margin-top: 1%;
         border-radius: 10px;
-        font-size: 15px;
+        font-size: 17px;
         font-weight: bold;
     }
     .Wrapper .p1{
@@ -660,7 +590,7 @@ button{
         width:100%;
         margin:0 auto;
         line-height: 30px;
-        color:white;
+        color:navy;
         
     
     }
