css height modification

--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -55,7 +55,7 @@ li{
 .Wrapper{
     width: 100%;
     margin: auto auto;
-    height: 100vh;
+    min-height: 100vh;
     background-size:cover;
     padding-top:50px;
     background-image: url(./Media/landingBg.jpg);
@@ -132,7 +132,7 @@ p{
     margin-top: 20px;
 }
 .contactDiv{
-    
+    min-height: 100vh;    
     padding-top: 50px;
     font-family: serif;
     background-color:#207FC1;
@@ -261,6 +261,7 @@ button{
         animation-duration: 10s;
         font-family: serif; 
         color: navy;
+        min-height: 100vh;
     }
 .info{
     margin:50px 2%;
@@ -290,7 +291,7 @@ button{
     .Wrapper{
         width: 100%;
         margin: auto auto;
-        height: 100vh;
+        min-height: 100vh;
         background-size:100% 100%;
         padding-top: 120px;
         background-image: url(./Media/landingBg.jpg);
@@ -362,6 +363,7 @@ button{
         padding-top: 130px;
         font-family: serif;
         background-color: #207FC1;
+        min-height: 100vh;
     }
     .contactDiv h1{
         color:white;
@@ -524,7 +526,7 @@ button{
     .Wrapper{
         width: 100%;
         margin: auto auto;
-        height: 100vh;
+        min-height: 100vh;
         background-size:100% 100%;
         padding-top: 120px;
         background-image: url(./Media/landingBg.jpg);
@@ -606,6 +608,7 @@ button{
         display: flex;
         flex-direction:column;
         clear:both;
+        min-height: 100vh;
     }
     .contactDiv h1{
         color:white;
