--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -275,6 +275,9 @@ button{
 }
 .projectSubHeading{
     animation:animation 5s;
+    width:90%;
+    margin: 0 auto;
+    
 }
 .back-to-top{
     width:50px;
@@ -338,7 +341,7 @@ button{
         display: flex;
         flex-direction: column;
         align-content: center;
-        margin: 0 auto;
+        margin: 2% auto;
 
     }
     .grid_projects a{
@@ -523,6 +526,8 @@ button{
     }
     .projectSubHeading{
         animation:animation 5s;
+        width:90%;
+        margin: 0 auto;
     }
     .back-to-top{
         width:50px;
@@ -590,7 +595,7 @@ button{
         display: flex;
         flex-direction: column;
         align-content: center;
-        margin: 0 auto;
+        margin: 2% auto;
 
     }
     .grid_projects a{
@@ -655,7 +660,7 @@ button{
         display: block;
         margin:0 auto;
         color:blue;
-        font-size:25px;
+        font-size:15px;
         margin-top: 1%;
         font-style: italic;
         border-radius: 10px;
