--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -45,7 +45,7 @@ z-index: 1000;
 }
 li{
     color: white;
-    display: inline-block;
+    list-style: none;
     line-height: 70px;
     float:left;
     font-size: 25px;  
@@ -246,7 +246,7 @@ button{
 }
 }
 /*Ipad Styling*/
-@media only screen and (max-width:1023px) and (min-width:720px){
+@media only screen and (max-width:1023px) and (min-width:700px){
 
     .info{
     margin:5% auto;
@@ -258,7 +258,7 @@ button{
         margin:0 auto;
         width: 100%;
         font-family: serif;
-        
+        position:fixed;
         z-index: 1000;
     }
 
@@ -497,7 +497,7 @@ button{
 }
 
 /*Moblie Styling*/
-@media only screen and (max-width:720px){
+@media only screen and (max-width:700px){
 
     #mainNav{
         position: 0;
