--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -12,14 +12,27 @@
 @media only screen and (min-width:1024px){
 
 #mainNav{
-background-color:blue;
+background-color:white;
 height: 70px;
 margin:0 auto;
 width: 100%;
 font-family: serif;
 position:fixed;
 z-index: 1000;
+display: flex;
+flex-direction: row;
+border-bottom: blue 1px solid;
 }
+.mainLogo img{
+    width: 135px;
+    height: 70px;
+    margin-left: 25px;
+}
+.mainLogo img:hover{
+    border:1px blue solid;
+    border-radius: 5px;
+}
+
 .Wrapper .typedWords{
     padding-top: 50px;
     animation-name:animation;
@@ -33,7 +46,7 @@ z-index: 1000;
     margin:20px 2%;
     text-align:left;
     width:60%;
-    color:white;
+    color:black;
     font-size:30px;
 }
 .projectSubHeading{
@@ -44,46 +57,45 @@ z-index: 1000;
 
 }
 li{
-    color: white;
+    color:black;
     list-style: none;
     line-height: 70px;
-    float:left;
-    font-size: 25px;  
+    margin-left: 50px;
+    font-size: 20px;
 }
-li img{
-    height: 25px;
-    background-color: white;
-    border: 1px;
-    border-radius: 25%;
+li a:hover{
+    border: 2px solid blue;
+    border-radius: 10px 10px 10px 10px;
+    box-shadow:1px 1px 5px 0 blue ;
+    
 }
-.contactLink, .projectLink{
-    margin-left:20%;
+ul{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 }
+
 .Wrapper{
     width: 100%;
     margin: auto auto;
     min-height: 100vh;
     background-size:cover;
     padding-top:50px;
-    background-image: url(./Media/landingBg.jpg);
+    background-image: url(./Media/landingPageBG.jpg);
     background-repeat:no-repeat;
 
 }
 .Wrapper h1{
     margin-top: 15vh;
-    color:white;
+    color:black;
     font-family:serif;
     font-size: 40px;
 }
 .Wrapper a{
-    color:white;
+    color:black;
     animation-name:animation;
     animation-duration: 5s;
     font-family: serif;
-}
-ul{
-    
-    margin: 0 0 0 0;
 }
 h1{
     animation-name:animation;
@@ -202,10 +214,8 @@ textarea{
     line-height: 50px;
 }
 a{
-    color:white;
-}
-a:hover{
-    color:gray;
+    color:black;
+    text-decoration: none;
 }
 button{
     margin-top:2%;
