--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -23,10 +23,16 @@ display: flex;
 flex-direction: row;
 border-bottom: blue 1px solid;
 }
+.sideNav{
+    display: none;
+}
 .mainLogo img{
     width: 135px;
     height: 70px;
     margin-left: 25px;
+}
+.topNavMobile{
+    display: none;
 }
 .mainLogo img:hover{
     border:1px blue solid;
@@ -69,7 +75,7 @@ li a:hover{
     box-shadow:1px 1px 5px 0 blue ;
     
 }
-ul{
+.mainNavList{
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -261,71 +267,107 @@ button{
     .info{
     margin:5% auto;
     }
-    #mainNav{
+    .sideNav{
         position: 0;
-        background-color:#0000ff;
-        height: 35px;
         margin:0 auto;
-        width: 100%;
         font-family: serif;
         position:fixed;
         z-index: 1000;
+        height: 100vh;
+        width: 100%;
+        background:rgba(0,0,0,0.75);
+        visibility: hidden;
     }
-
-.info{
-    margin:50px 2%;
-    text-align:left;
-    width:60%;
-    color:white;
-    font-size:30px;
-}
-.projectSubHeading{
-    animation:animation 5s;
-    width:90%;
-    margin: 0 auto;
-    
-}
-.back-to-top{
-    width:50px;
-}
-
-    ul{
-        padding: 0;
-        text-align: left;
-        padding-left: 10%;
-        margin:0;
+    .hamburgerIcon{
+        float: right;
+        margin:15px 25px;
+        height:30px;
+    }
+    .topNavMobile{
+        width: 100%;
+        height: 65px;
+        position: fixed;
+        background-color: white;
         
     }
-    li{
-        color: white;
-        display:inline-block;
-        font-size: 17px;
-        line-height: 35px;
-        margin-right:10%;
+    
+    .sideNaveList a{
+        color:white
     }
-    li img{
-        height: 20px;
-        background-color: white;
-        border: 1px;
-        border-radius: 25%;
+    .mainLogoMobile{
+        height:50px;
+        width: 100px;
+        float:left;
+        margin: 15px 25px;
+    }
+    .mainLogo{
+        display: none;
+    }
+    .mainLogoMobile img{
+        height:100%;
+        width: 100%;
+    }
+    .mainLogoMobile img:hover{
+        border:1px blue solid;
+        border-radius: 5px;
+    }
+    .mainNavList{
+        display:none
+    }
+    .sideNavList{
+        display: block;
+    }
+    li a{
+        color: white;
+        text-decoration: none;
+    }
+    li{
+        list-style: none;
+        line-height: 70px;
+        margin-top: 30px;
+        font-size: 20px;
+        
+    }
+
+    li a:hover{
+        border: 2px solid blue;
+        border-radius: 10px 10px 10px 10px;
+        box-shadow:1px 1px 5px 0 blue ;
+        
+    }
+
+    .info{
+        margin:50px 2%;
+        text-align:left;
+        width:60%;
+        color:white;
+        font-size:30px;
+    }
+    .projectSubHeading{
+        animation:animation 5s;
+        width:90%;
+        margin: 0 auto;
+    
+    }
+    .back-to-top{
+        width:50px;
     }
     .Wrapper{
         width: 100%;
         margin: auto auto;
         min-height: 100vh;
-        background-size:100% 100%;
         padding-top: 50px;
-        background-image: url(./Media/landingBg.jpg);
-        background-repeat:no-repeat;
+        background-image: url(./Media/landingPageBGMobile.png);
+        background-size: 100% 100%;
     }
     .Wrapper h1{
         margin-top: 7vh;
-        color:white;
+        color:black;
         font-family:serif;
         font-size: 25px;
     }
     .Wrapper a{
-        color: white;
+        color: black;
         animation-name:animation;
         animation-duration: 5s;
         font-family: serif;
@@ -455,13 +497,7 @@ button{
         width:80%;
         margin:0 auto;
         line-height: 35px;
-        color:white;
-    }
-    a{
-        color:white;
-    }
-    a:hover{
-        color:gray;
+        color:black;
     }
     button{
         margin-top:2%;
@@ -571,7 +607,8 @@ button{
         min-height: 100vh;
         background-size:100% 100%;
         padding-top: 120px;
-        background-image: url(./Media/landingBg.jpg);
+        background-image: url(./Media/landingPageBG.jpg);
+        background-size: cover;
         background-repeat:no-repeat;
     }
     .Wrapper h1{
@@ -724,7 +761,7 @@ button{
     
     }
     a{
-        color:white;
+        color:black;
     }
     a:hover{
         color:gray;
