--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -1,12 +1,20 @@
 
 
 @font-face{
-    font-family: serif;
+    font-family: rowdiesBold;
     src: url(./Media/fonts/Rowdies/Rowdies-Bold.ttf)
 }
 @font-face{
-    font-family: serif;
-    src:url(./Media/fonts/Rowdies/Rowdies-Regular.ttf)
+    font-family: RowdiesRegular;
+    src:url(./Media/fonts/Rowdies/Rowdies-Light.ttf)
+}
+@keyframes typing{
+    from{
+     width: 0;   
+    }
+    to{
+        width: 100%;
+    }
 }
 /*Desktop Styling*/
 @media only screen and (min-width:1024px){
@@ -16,7 +24,7 @@ background-color:white;
 height: 70px;
 margin:0 auto;
 width: 100%;
-font-family: serif;
+font-family: RowdiesRegular;
 position:fixed;
 z-index: 1000;
 display: flex;
@@ -46,10 +54,10 @@ border-bottom: blue 1px solid;
     width:80%;
     margin:0 auto;
     animation-duration: 5s;
-    font-family: serif; 
     color:black;
-}.info{
-    margin:20px 2%;
+}
+.info{
+    margin:20px 100px;
     text-align:left;
     width:60%;
     color:black;
@@ -89,13 +97,18 @@ li a:hover{
     padding-top:50px;
     background-image: url(./Media/landingPageBG.jpg);
     background-repeat:no-repeat;
+    
 
 }
 .Wrapper h1{
+
     margin-top: 15vh;
     color:black;
-    font-family:serif;
-    font-size: 40px;
+    font-family:RowdiesRegular;
+    font-size: 30px;
+    text-align: left;
+    margin-left: 100px;
+    
 }
 .Wrapper a{
     color:black;
@@ -106,7 +119,7 @@ li a:hover{
 h1{
     animation-name:animation;
     animation-duration: 5s;
-    font-family: serif;
+    font-family: RowdiesRegular;
 }
 .h1{
     font-size: 40px;
@@ -115,7 +128,7 @@ h1{
 }
 p{
     font-size: 25px;
-    font-family: serif;
+    font-family: RowdiesRegular;
     
 }
 .projectSection{
@@ -182,7 +195,7 @@ input,label{
     height: 25px;
     display: block;
     margin:0 auto;
-    color:blue;
+    color:black;
     font-size:25px;
     margin-top: 1%;
     font-style: italic;
@@ -190,7 +203,7 @@ input,label{
     
 }
 input{
-    font-size: 20px;
+    font-size: 15px;
     font-style:normal;
 }
 .confirmationAppear{
@@ -200,21 +213,22 @@ input{
 }
 label{
     color: white;
+    font-family: RowdiesRegular;
 }
 textarea{
     width: 40%;
     height: 100px;
-    color: blue;
+    color: black;
     margin-top: 1%;
     border-radius: 10px;
-    font-size: 17px;
+    font-size: 15px;
     font-weight: bold;
 }
 .Wrapper .p1{
-    font-style: italic;
-    animation-name: animation;
-    animation-direction: normal;
-    animation-duration: 5s;
+    overflow:hidden;
+    white-space: nowrap;
+    width:0;
+    animation: typing 5s steps(45,end) forwards;
     width:80%;
     margin:0 auto;
     line-height: 50px;
@@ -264,13 +278,10 @@ button{
 /*Ipad Styling*/
 @media only screen and (max-width:1023px) and (min-width:700px){
 
-    .info{
-    margin:5% auto;
-    }
     .sideNav{
         position: 0;
         margin:0 auto;
-        font-family: serif;
+        font-family: RowdiesRegular;
         position:fixed;
         z-index: 1000;
         height: 100vh;
@@ -335,12 +346,14 @@ button{
         box-shadow:1px 1px 5px 0 blue ;
         
     }
+    .Wrapper img{
+        height: 75px;
+    }
 
     .info{
-        margin:50px 2%;
+        margin:20px 50px;
         text-align:left;
         width:60%;
-        color:white;
         font-size:30px;
     }
     .projectSubHeading{
@@ -363,8 +376,10 @@ button{
     .Wrapper h1{
         margin-top: 7vh;
         color:black;
-        font-family:serif;
-        font-size: 25px;
+        font-family:RowdiesRegular;
+        font-size: 20px;
+        text-align: left;
+        margin-left: 50px;
     }
     .Wrapper a{
         color: black;
@@ -490,14 +505,15 @@ button{
     }
  
     .Wrapper .p1{
-        font-style: italic;
-        animation-name: animation;
-        animation-direction: normal;
-        animation-duration: 5s;
+        overflow:hidden;
+        white-space: nowrap;
+        width:0;
+        animation: typing 5s steps(45,end) forwards;
         width:80%;
         margin:0 auto;
         line-height: 35px;
         color:black;
+        font-family: RowdiesRegular;
     }
     button{
         margin-top:2%;
